<resources>
    <string name="app_name">Rinba App</string>
    <string name="logo">Logo</string>
    <string name="start">Mulai</string>
    <string name="how_to_play">Cara Bermain</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="setting">Setting</string>
    <string name="back_button">Back Button</string>
    <string name="level_type">Jenis Level</string>

    <!-- Long String Description -->
    <string name="how_to_play_description">1. Smartphone yang digunakan harus memiliki jaringan internet\n2. Pemain hanya menggunakan 1 rindik dengan 11 bilah\n3. Permainan rindik hanya menggunakan 2 pemukul karet (panggul)\n4. Aplikasi akan mendeteksi suara rindik dari pemain\n5. Pemain diminta mengikuti pukulan sesuai yang diarahkan\n6. Saat pemain menekan tombol rekam, pukul bilah yg diminta sekali lalu tekan tombol selesai\n7. Setelah pemain menyelesaikan 1 level, akan terlihat poin sesuai pukulan yg benar\n8. Ikuti tahapan pembelajaran rindik dengan baik</string>
    <string name="about_description">Aplikasi ini dibuat untuk menyelesaikan Tugas Akhir Gusti Ayu Vidjaretha Wardana di Program Studi Informatika, Universitas Udayana.\n\n Aplikasi Rinba adalah sebuah aplikasi latihan dasar pada alat musik Rindik Bali yang menggunakan inputan suara. Dengan adanya aplikasi ini diharapkan generasi muda tetap mempelajari dan terus memelihara kebudayaan Bali khususnya alat musik rindik.</string>

    <!-- Level Type -->
    <string name="one_hand_level">SATU TANGAN \n (PEMULA)</string>
    <string name="two_hand_level">DUA TANGAN \n (LANJUTAN)</string>
    <string name="level_beginner">Level Pemula</string>
    <string name="level_advanced">Level Lanjutan</string>

    <!-- Level Number -->
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>

    <!-- Bilah Number -->
    <string name="bilah_1">1</string>
    <string name="bilah_2">2</string>
    <string name="bilah_3">3</string>
    <string name="bilah_4">4</string>
    <string name="bilah_5">5</string>
    <string name="bilah_6">6</string>
    <string name="bilah_7">7</string>
    <string name="bilah_8">8</string>
    <string name="bilah_9">9</string>
    <string name="bilah_10">10</string>
    <string name="bilah_11">11</string>

    <!-- Play Activity -->
    <string name="initial_text">Selamat Bermain !</string>
    <string name="record">Rekam</string>
    <string name="stop">Berhenti</string>
    <string name="recording">Merekam...</string>
    <string name="stopped">Selesai...</string>
    <string name="result_score">Perolehan Poin</string>
    <string name="score_template">%d/100</string>
    <string name="loading">Loading...</string>
    <string name="ask_play_again">Apakah Anda ingin bermain lagi?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="splashscreen">SplashScreen</string>

</resources>