<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbali3"
    tools:context=".ui.play.PlayActivity">

    <Button
        android:id="@+id/btn_help"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_bantuan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/number_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/rindik_container"
        app:layout_constraintEnd_toEndOf="@id/rindik_container"
        app:layout_constraintStart_toStartOf="@id/rindik_container">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_2"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_3"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_4"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_5"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_6"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_7"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_8"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_9"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_10"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/bilah_11"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rindik_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah1"
            android:layout_width="30dp"
            android:layout_height="250dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah2"
            android:layout_width="30dp"
            android:layout_height="235dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            android:clickable="true"
            android:focusable="true" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah3"
            android:layout_width="30dp"
            android:layout_height="220dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah4"
            android:layout_width="30dp"
            android:layout_height="205dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah5"
            android:layout_width="30dp"
            android:layout_height="190dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah6"
            android:layout_width="30dp"
            android:layout_height="175dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah7"
            android:layout_width="30dp"
            android:layout_height="160dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah8"
            android:layout_width="30dp"
            android:layout_height="145dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah9"
            android:layout_width="30dp"
            android:layout_height="130dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah10"
            android:layout_width="30dp"
            android:layout_height="115dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

        <com.example.rindikapp.utils.BilahImageView
            android:id="@+id/bilah11"
            android:layout_width="30dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/card"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/initial_text"
            android:textStyle="bold"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/btn_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/record" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>